Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/pkg/package-info.out
package-info.java:11:20: compiler.err.expression.not.allowable.as.annotation.value
1 error
